@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2025 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2026 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -55,8 +55,6 @@
 #else
 #include	<times.h>
 #endif
-
-#define DOTMAX	MAXDEPTH	/* maximum level of . nesting */
 
 /*
  * Handler function for nv_scan() that unsets a variable's export attribute
@@ -259,52 +257,47 @@ int    b_dot_cmd(int n,char *argv[],Shbltin_t *context)
 		errormsg(SH_DICT,ERROR_usage(2),"%s",optusage(NULL));
 		UNREACHABLE();
 	}
-	if(sh.dot_depth >= DOTMAX)
+	if(sh.dot_depth >= MAXDEPTH)
 	{
 		errormsg(SH_DICT,ERROR_exit(1),e_toodeep,script);
 		UNREACHABLE();
 	}
-	if(!(np=sh.posix_fun))
+	/* check for KornShell style function first */
+	np = nv_search(script,sh.fun_tree,0);
+	if(np && is_afunction(np) && !nv_isattr(np,NV_FPOSIX) && !(sh_isoption(SH_POSIX) && context->bnode==SYSDOT))
 	{
-		/* check for KornShell style function first */
-		np = nv_search(script,sh.fun_tree,0);
-		if(np && is_afunction(np) && !nv_isattr(np,NV_FPOSIX) && !(sh_isoption(SH_POSIX) && context->bnode==SYSDOT))
+		if(!np->nvalue)
 		{
-			if(!np->nvalue)
+			path_search(script,NULL,0);
+			if(np->nvalue)
 			{
-				path_search(script,NULL,0);
-				if(np->nvalue)
-				{
-					if(nv_isattr(np,NV_FPOSIX))
-						np = 0;
-				}
-				else
-				{
-					errormsg(SH_DICT,ERROR_exit(1),e_found,script);
-					UNREACHABLE();
-				}
+				if(nv_isattr(np,NV_FPOSIX))
+					np = 0;
 			}
-		}
-		else
-			np = 0;
-		if(!np)
-		{
-			if((fd=path_open(script,path_get(script))) < 0)
+			else
 			{
-				errormsg(SH_DICT,ERROR_system(1),e_open,script);
+				errormsg(SH_DICT,ERROR_exit(1),e_found,script);
 				UNREACHABLE();
 			}
-			filename = path_fullname(stkptr(sh.stk,PATH_OFFSET));
 		}
+	}
+	else
+		np = 0;
+	if(!np)
+	{
+		/* open the dot script */
+		if((fd=path_open(script,path_get(script))) < 0)
+		{
+			errormsg(SH_DICT,ERROR_system(1),e_open,script);
+			UNREACHABLE();
+		}
+		filename = path_fullname(stkptr(sh.stk,PATH_OFFSET));
 	}
 	*prevscope = sh.st;
 	sh.st.lineno = np?((struct functnod*)nv_funtree(np))->functline:1;
 	sh.st.save_tree = sh.var_tree;
 	if(filename)
-	{
 		sh.st.filename = filename;
-		sh.st.lineno = 1;
-	}
 	sh.st.prevst = prevscope;
 	sh.st.self = &savst;
 	sh.topscope = (Shscope_t*)sh.st.self;
@@ -313,7 +306,6 @@ int    b_dot_cmd(int n,char *argv[],Shbltin_t *context)
 	if(np)
 		sh.st.filename = ((struct Ufunction*)np->nvalue)->fname;
 	nv_putval(SH_PATHNAMENOD, sh.st.filename ,NV_NOFREE);
-	sh.posix_fun = 0;
 	if(np || argv[1])
 		argsave = sh_argnew(argv,&saveargfor);
 	sh_pushcontext(&buff,SH_JMPDOT);
@@ -325,9 +317,13 @@ int    b_dot_cmd(int n,char *argv[],Shbltin_t *context)
 		sh.dot_depth++;
 		update_sh_level();
 		if(np)
+		{
+			/* execute the function as though it were a dot script */
 			sh_exec((Shnode_t*)(nv_funtree(np)),sh_isstate(SH_ERREXIT));
+		}
 		else
 		{
+			/* run the dot script */
 			buffer = sh_malloc(IOBSIZE+1);
 			iop = sfnew(NULL,buffer,IOBSIZE,fd,SFIO_READ);
 			sh_offstate(SH_NOFORK);
@@ -350,7 +346,7 @@ int    b_dot_cmd(int n,char *argv[],Shbltin_t *context)
 	}
 	if (sh.st.self != &savst)
 		*sh.st.self = sh.st;
-	/* only restore the top Shscope_t portion for POSIX functions */
+	/* only restore the top Shscope_t portion for functions */
 	memcpy(&sh.st, prevscope, sizeof(Shscope_t));
 	sh.topscope = (Shscope_t*)prevscope;
 	nv_putval(SH_PATHNAMENOD, sh.st.filename ,NV_NOFREE);
