@@ -2,7 +2,7 @@
 *                                                                      *
 *               This software is part of the ast package               *
 *          Copyright (c) 1982-2012 AT&T Intellectual Property          *
-*          Copyright (c) 2020-2025 Contributors to ksh 93u+m           *
+*          Copyright (c) 2020-2026 Contributors to ksh 93u+m           *
 *                      and is licensed under the                       *
 *                 Eclipse Public License, Version 2.0                  *
 *                                                                      *
@@ -2919,127 +2919,171 @@ int sh_funscope(int argn, char *argv[],int(*fun)(void*),void *arg,int execflg)
 	struct argnod		*envlist=0;
 	int			isig,jmpval;
 	volatile int		r = 0;
-	int			n;
+	int			posix_fun = 0, save_loopcnt = sh.st.loopcnt;
 	char			save_invoc_local;
-	char 			**savsig, *save_debugtrap = 0;
+	char 			**savsig;
 	struct funenv		*fp = 0;
 	struct checkpt		*buffp = stkalloc(sh.stk,sizeof(struct checkpt));
 	Namval_t		*nspace = sh.namespace;
 	Dt_t			*last_root = sh.last_root;
-	Shopt_t			options;
-	options = sh.options;
+	Shopt_t			save_options;
 	NOT_USED(argn);
-	if(sh.fn_depth==0)
-		sh.glob_options =  sh.options;
-	else
-		sh.options = sh.glob_options;
 	*prevscope = sh.st;
-	sh_offoption(SH_ERREXIT);
 	sh.st.prevst = prevscope;
 	sh.st.self = savst;
 	sh.topscope = (Shscope_t*)sh.st.self;
-	sh.st.opterror = sh.st.optchar = 0;
-	sh.st.optindex = 1;
 	sh.st.loopcnt = 0;
 	if(!fun)
 	{
 		fp = (struct funenv*)arg;
-		sh.st.real_fun = fp->node->nvalue;
 		envlist = fp->env;
+		posix_fun = nv_isattr(fp->node,NV_FPOSIX);
+		if(!posix_fun)
+			sh.st.real_fun = fp->node->nvalue;
+	}
+	if(posix_fun)
+	{
+		/* increase POSIX function depth (shared with dotted KornShell function depth) */
+		if(sh.dot_depth >= MAXDEPTH)
+		{
+			errormsg(SH_DICT,ERROR_exit(1),e_toodeep,argv[0]);
+			UNREACHABLE();
+		}
+		sh.dot_depth++;
+	}
+	else
+	{
+		save_options = sh.options;
+		sh.st.opterror = sh.st.optchar = 0;
+		sh.st.optindex = 1;
+		if(sh.fn_depth==0)
+			sh.glob_options = sh.options;
+		else
+			sh.options = sh.glob_options;
+		sh_offoption(SH_ERREXIT);
 	}
 	prevscope->save_tree = sh.var_tree;
-	n = dtvnext(prevscope->save_tree)!= (sh.namespace?sh.var_base:0);
-	sh_scope(envlist,1);
-	if(n)
+	if(!posix_fun)
 	{
-		/* eliminate parent scope */
-		nv_scan(prevscope->save_tree, local_exports, NULL, NV_EXPORT, NV_EXPORT|NV_NOSCOPE);
+		/* create a local scope for the KornShell function */
+		int dtret = dtvnext(prevscope->save_tree) != (sh.namespace?sh.var_base:0);
+		sh_scope(envlist,1);
+		if(dtret)
+		{
+			/*
+			 * Clone exported variables from the previous scope into
+			 * the new static local scope. The NV_NOSCOPE flag will
+			 * cause nv_scan() to eliminate the viewpath to the parent
+			 * function's static scope.
+			 */
+			nv_scan(prevscope->save_tree, local_exports, NULL, NV_EXPORT, NV_EXPORT|NV_NOSCOPE);
+		}
 	}
 	sh.st.save_tree = sh.var_tree;
 	if(!fun)
 	{
-		if(nv_isattr(fp->node,NV_TAGGED))
-			sh_onoption(SH_XTRACE);
-		else if(!sh_isoption(SH_FUNCTRACE))
-			sh_offoption(SH_XTRACE);
+		if(fp->node->nvalue)
+			sh.st.filename = ((struct Ufunction *)fp->node->nvalue)->fname;
+		nv_putval(SH_PATHNAMENOD, sh.st.filename, NV_NOFREE);
+		sh.last_root = nv_dict(DOTSHNOD);
 	}
-	sh.st.cmdname = argv[0];
-	/* save trap table */
-	if((nsig=sh.st.trapmax)>0 || sh.st.trapcom[0])
+	if(!posix_fun)
 	{
-		savsig = sh_malloc(nsig * sizeof(char*));
-		/*
-		 * the data is, usually, modified in code like:
-		 *	tmp = buf[i]; buf[i] = sh_strdup(tmp); free(tmp);
-		 * so sh.st.trapcom needs a "deep copy" to properly save/restore pointers.
-		 */
-		for (isig = 0; isig < nsig; ++isig)
+		char	*save_debugtrap = 0;
+		if(!fun)
 		{
-			if(sh.st.trapcom[isig] == Empty)
-				savsig[isig] = Empty;
-			else if(sh.st.trapcom[isig])
-				savsig[isig] = sh_strdup(sh.st.trapcom[isig]);
-			else
-				savsig[isig] = NULL;
+			if(nv_isattr(fp->node,NV_TAGGED))
+				sh_onoption(SH_XTRACE);
+			else if(!sh_isoption(SH_FUNCTRACE))
+				sh_offoption(SH_XTRACE);
 		}
+		sh.st.cmdname = argv[0];
+		/* save trap table */
+		if((nsig=sh.st.trapmax)>0 || sh.st.trapcom[0])
+		{
+			savsig = sh_malloc((size_t)nsig * sizeof(char*));
+			/*
+			 * the data is, usually, modified in code like:
+			 *	tmp = buf[i]; buf[i] = sh_strdup(tmp); free(tmp);
+			 * so sh.st.trapcom needs a "deep copy" to properly save/restore pointers.
+			 */
+			for (isig = 0; isig < nsig; ++isig)
+			{
+				if(sh.st.trapcom[isig] == Empty)
+					savsig[isig] = Empty;
+				else if(sh.st.trapcom[isig])
+					savsig[isig] = sh_strdup(sh.st.trapcom[isig]);
+				else
+					savsig[isig] = NULL;
+			}
+		}
+		if(!fun && sh_isoption(SH_FUNCTRACE) && sh.st.trap[SH_DEBUGTRAP] && *sh.st.trap[SH_DEBUGTRAP])
+			save_debugtrap = sh_strdup(sh.st.trap[SH_DEBUGTRAP]);
+		sh_sigreset(-1);
+		if(save_debugtrap)
+			sh.st.trap[SH_DEBUGTRAP] = save_debugtrap;
+		save_invoc_local = sh.invoc_local;
+		sh.invoc_local = 0;
 	}
-	if(!fun && sh_isoption(SH_FUNCTRACE) && sh.st.trap[SH_DEBUGTRAP] && *sh.st.trap[SH_DEBUGTRAP])
-		save_debugtrap = sh_strdup(sh.st.trap[SH_DEBUGTRAP]);
-	sh_sigreset(-1);
-	if(save_debugtrap)
-		sh.st.trap[SH_DEBUGTRAP] = save_debugtrap;
 	argsav = sh_argnew(argv,&saveargfor);
 	sh_pushcontext(buffp,SH_JMPFUN);
 	errorpush(&buffp->err,0);
 	error_info.id = argv[0];
 	if(!fun)
 	{
-		struct Ufunction *rp = fp->node->nvalue;
-		if(rp)
-			sh.st.filename = rp->fname;
 		sh.st.funname = nv_name(fp->node);
-		sh.last_root = nv_dict(DOTSHNOD);
-		nv_putval(SH_PATHNAMENOD,sh.st.filename,NV_NOFREE);
 		nv_putval(SH_FUNNAMENOD,sh.st.funname,NV_NOFREE);
 	}
-	save_invoc_local = sh.invoc_local;
-	sh.invoc_local = 0;
 	jmpval = sigsetjmp(buffp->buff,0);
 	if(jmpval == 0)
 	{
-		if(sh.fn_depth >= MAXDEPTH)
+		if(!posix_fun)
 		{
-			sh.toomany = 1;
-			siglongjmp(*sh.jmplist,SH_JMPERRFN);
+			/* increase KornShell function depth */
+			if(sh.fn_depth >= MAXDEPTH)
+			{
+				sh.toomany = 1;
+				siglongjmp(*sh.jmplist,SH_JMPERRFN);
+			}
+			sh.fn_depth++;
 		}
-		sh.fn_depth++;
 		update_sh_level();
 		if(fun)
 			r= (*fun)(arg);
 		else
 		{
-			char		**arg = sh.st.real_fun->argv;
-			Namval_t	*np, *nq, **nref;
-			if(nref=fp->nref)
+			if(posix_fun)
+				sh_exec((Shnode_t*)(nv_funtree(fp->node)),sh_isstate(SH_ERREXIT));
+			else
 			{
-				sh.last_root = 0;
-				for(r=0; arg[r]; r++)
+				char		**arg = sh.st.real_fun->argv;
+				Namval_t	*np, *nq, **nref;
+				if(nref=fp->nref)
 				{
-					np = nv_search(arg[r],sh.var_tree,NV_NOSCOPE|NV_ADD);
-					if(np && (nq=*nref++))
+					sh.last_root = 0;
+					for(r=0; arg[r]; r++)
 					{
-						np->nvalue = sh_newof(0,struct Namref,1,0);
-						((struct Namref*)np->nvalue)->np = nq;
-						nv_onattr(np,NV_REF|NV_NOFREE);
+						np = nv_search(arg[r],sh.var_tree,NV_NOSCOPE|NV_ADD);
+						if(np && (nq=*nref++))
+						{
+							np->nvalue = sh_newof(0,struct Namref,1,0);
+							((struct Namref*)np->nvalue)->np = nq;
+							nv_onattr(np,NV_REF|NV_NOFREE);
+						}
 					}
 				}
+				sh_exec((Shnode_t*)(nv_funtree((fp->node))),execflg|SH_ERREXIT);
 			}
-			sh_exec((Shnode_t*)(nv_funtree((fp->node))),execflg|SH_ERREXIT);
 			r = sh.exitval;
 		}
 	}
-	sh.invoc_local = save_invoc_local;
-	sh.fn_depth--;
+	if(posix_fun)
+		sh.dot_depth--;
+	else
+	{
+		sh.fn_depth--;
+		sh.invoc_local = save_invoc_local;
+	}
 	update_sh_level();
 	if(sh.fn_depth==1 && jmpval==SH_JMPERRFN)
 	{
@@ -3047,10 +3091,39 @@ int sh_funscope(int argn, char *argv[],int(*fun)(void*),void *arg,int execflg)
 		UNREACHABLE();
 	}
 	sh_popcontext(buffp);
-	sh_unscope();
-	sh.namespace = nspace;
+	/* reinstate the previous scope */
+	if(!posix_fun)
+	{
+		sh_unscope();
+		sh.namespace = nspace;
+	}
 	sh.var_tree = (Dt_t*)prevscope->save_tree;
-	sh_argreset(argsav,saveargfor);
+	if((posix_fun && jmpval!=SH_JMPSCRIPT) || !posix_fun)
+		sh_argreset(argsav,saveargfor);
+	else
+	{
+		prevscope->dolc = sh.st.dolc;
+		prevscope->dolv = sh.st.dolv;
+	}
+	/*
+	 * POSIX function cleanup
+	 */
+	if(posix_fun)
+	{
+		if(sh.st.self != savst)
+			*sh.st.self = sh.st;
+		/* Only restore the top Shscope_t portion for POSIX functions */
+		memcpy(&sh.st, prevscope, sizeof(Shscope_t));
+		sh.topscope = (Shscope_t*)prevscope;
+		nv_putval(SH_PATHNAMENOD,sh.st.filename,NV_NOFREE);
+		if(jmpval && jmpval!=SH_JMPFUN)
+			siglongjmp(*sh.jmplist,jmpval);
+		sh.st.loopcnt = save_loopcnt;
+		return r;
+	}
+	/*
+	 * KornShell function cleanup
+	 */
 	trap = sh.st.trapcom[0];
 	sh.st.trapcom[0] = 0;
 	sh_sigreset(1);
@@ -3066,7 +3139,7 @@ int sh_funscope(int argn, char *argv[],int(*fun)(void*),void *arg,int execflg)
 		free(savsig);
 	}
 	sh.trapnote=0;
-	sh.options = options;
+	sh.options = save_options;
 	sh.last_root = last_root;
 	if(jmpval == SH_JMPSUB)
 		siglongjmp(*sh.jmplist,jmpval);
@@ -3103,30 +3176,10 @@ static void sh_funct(Namval_t *np,int argn, char *argv[],struct argnod *envlist,
 		sh_setscope(sh.topscope);
 	sh.st.lineno = error_info.line;
 	rp->running += 2;
-	if(nv_isattr(np,NV_FPOSIX))
-	{
-		char *save;
-		int loopcnt = sh.st.loopcnt;
-		sh.posix_fun = np;
-		save = argv[-1];
-		argv[-1] = 0;
-		sh.st.funname = nv_name(np);
-		sh.last_root = nv_dict(DOTSHNOD);
-		nv_putval(SH_FUNNAMENOD, nv_name(np),NV_NOFREE);
-		opt_info.index = opt_info.offset = 0;
-		error_info.errors = 0;
-		sh.st.loopcnt = 0;
-		b_dot_cmd(argn+1,argv-1,&sh.bltindata);
-		sh.st.loopcnt = loopcnt;
-		argv[-1] = save;
-	}
-	else
-	{
-		fun.env = envlist;
-		fun.node = np;
-		fun.nref = 0;
-		sh_funscope(argn,argv,0,&fun,execflg);
-	}
+	fun.env = envlist;
+	fun.node = np;
+	fun.nref = 0;
+	sh_funscope(argn,argv,0,&fun,execflg);
 	sh.last_root = nv_dict(DOTSHNOD);
 	nv_putval(SH_FUNNAMENOD,fname,NV_NOFREE);
 	nv_putval(SH_PATHNAMENOD,sh.st.filename,NV_NOFREE);
